fixed overflow

--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ body{
     width: 100vw;
     height: 100vh;
     color: white;
-    overflow-x: auto;
+    overflow-x: hidden;
 }
 
 .main{
